yamls/minio/minio_console.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
    role: console
  name: minio-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
      role: console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        role: console 
    spec:
      containers:
      - args:
        - server 
        - /data{1...4}
        image: change-image-name
        imagePullPolicy: IfNotPresent
        name: minio-console
        volumeMounts:
        - mountPath: /root/.console/certs/CAs
          name: console-certs
        ports:
        - containerPort: 9090
          name: console
          protocol: TCP
        resources:
          requests:
            cpu: 20m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: docker-hub-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes: 
      - name: console-certs
        secret:
          secretName: minio-certs


---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app: minio
    role: console
spec:
  selector:
    app: minio
    role: console
  type: ClusterIP
  ports:
   - port: 9001
     targetPort: 9090
     name: console
