yamls/minio/minio_vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: default
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - torrent.katonic.ai
  http:
  - match:
    - uri:
        prefix: /minio
    rewrite:
      uri: /login
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
  - match:
    - uri:
        prefix: /static
    - uri:
        regex: /images/.*\.(ico|png|jpg|svg|ttf|woff|woff2|css)$
    - uri:
        prefix: /api
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
  - match:
    - uri:
        regex: /styles/.*\.(ico|png|jpg|svg|ttf|woff|woff2|css)$
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
  - match:
    - uri:
        prefix: /login
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
  - match:
    - uri:
        prefix: /buckets
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
  - match:
    - uri:
        prefix: /oauth_callback
    route:
    - destination:
        host: minio-console
        port:
          number: 9001
